<resources>
    <string name="app_name">Project_6</string>
    <string name="number">Ваша норма воды в день:</string>
    <string name="header2">2000 мл</string>
    <string name="my_text_field_hint">Цель на день: </string>
    <string name="my_text_field_hint2">2000</string>
    <string name="my_text_field_hint3">Выполнено:</string>
    <string name="my_text_field_hint4">1200</string>
    <string name="my_text_field_hint5">Вы на пути к цели!</string>
    <string name="my_text_field_hint6">День 1</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="name">Name</string>
    <string name="closeactivity">CloseActivity</string>
    <string name="complete">Готово</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>